updated swag docs, updated router paths
