# internal/docs/swagger.json
@@ -12,7 +12,7 @@
     "host": "localhost:8080",
     "basePath": "/api",
     "paths": {
-        "/healthz": {
+        "/api/healthz": {
             "get": {
                 "description": "Returns a simple health check response to indicate that the service is running",
                 "produces": [
@@ -32,7 +32,7 @@
                 }
             }
         },
-        "/readyz": {
+        "/api/readyz": {
             "get": {
                 "description": "Checks the readiness of the service by verifying connectivity to RabbitMQ, MongoDB, and Dex",
                 "produces": [
@@ -194,64 +194,6 @@
                     },
                     "502": {
                         "description": "Bad Gateway",
-                        "schema": {
-                            "$ref": "#/definitions/httpsuite.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/v1/checker/status": {
-            "get": {
-                "security": [
-                    {
-                        "bearer": []
-                    },
-                    {
-                        "OAuth2": [
-                            "openid",
-                            "profile",
-                            "email",
-                            "groups",
-                            "audience:server:client_id:unimq-dashboard"
-                        ]
-                    }
-                ],
-                "description": "Get the current status of the notification checker",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Checker"
-                ],
-                "summary": "Get checker status",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/notify.CheckerStatus"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/httpsuite.ErrorResponse"
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized",
-                        "schema": {
-                            "$ref": "#/definitions/httpsuite.ErrorResponse"
-                        }
-                    },
-                    "403": {
-                        "description": "Forbidden",
-                        "schema": {
-                            "$ref": "#/definitions/httpsuite.ErrorResponse"
-                        }
-                    },
-                    "503": {
-                        "description": "Service Unavailable",
                         "schema": {
                             "$ref": "#/definitions/httpsuite.ErrorResponse"
                         }
@@ -1764,6 +1706,64 @@
                     },
                     "500": {
                         "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/httpsuite.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/status": {
+            "get": {
+                "security": [
+                    {
+                        "bearer": []
+                    },
+                    {
+                        "OAuth2": [
+                            "openid",
+                            "profile",
+                            "email",
+                            "groups",
+                            "audience:server:client_id:unimq-dashboard"
+                        ]
+                    }
+                ],
+                "description": "Get the current status of the notification checker",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Checker"
+                ],
+                "summary": "Get checker status",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/notify.CheckerStatus"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/httpsuite.ErrorResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/httpsuite.ErrorResponse"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/httpsuite.ErrorResponse"
+                        }
+                    },
+                    "503": {
+                        "description": "Service Unavailable",
                         "schema": {
                             "$ref": "#/definitions/httpsuite.ErrorResponse"
                         }
